02-k8s-development-minikube/k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres-deployment
spec:
    replicas: 1
    # Tells this deployment which Pods it's supposed to manage
    selector:
        matchLabels:
            component: postgres
    # All pods created by this deployment will have these attributes
    template:
        metadata:
            labels:
                component: postgres
        spec:
            volumes:
                - name: postgres-storage
                  # take advantage of PVC (advertisement) created in "database-persistent-volume-claim.yaml"
                  persistentVolumeClaim:
                      claimName: database-persistent-volume-claim
            containers:
                - name: postgres
                  image: postgres #use generic postgres image from DockerHub
                  # port that we'll expose/open from this pod/container to outside world
                  ports:
                      - containerPort: 5432
                  volumeMounts:
                      - name: postgres-storage #defined above
                        mountPath: /var/lib/postgresql/data #default path for Postgres DB
                        subPath: postgres #create/use a sub-folder with volume
                  #   env:
                  #       - name: POSTGRES_PASSWORD
                  #         value: "postgres_password"
