02-k8s-development-minikube/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: server
    # All pods created by this deployment will have these attributes
    template:
        metadata:
            labels:
                component: server
        spec:
            containers:
                - name: server
                  image: cburkins/multi-server
                  # port that we'll expose/open from this pod/container to outside world
                  ports:
                      - containerPort: 5000
