02-k8s-development-minikube/k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: web
    ports:
        - port: 3000 #front-end port exposed to other pods in the clusters
          targetPort: 3000 #port exposed on the back-end target pod
