02-k8s-development-minikube/k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgres-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        component: postgres
    ports:
        - port: 5432 #front-end port exposed to other pods in the clusters
          targetPort: 5432 #port exposed on the back-end target pod
