02-k8s-development-minikube/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx #Create controller based on nginx project
        nginx.ingress.kubernetes.io/rewrite-target: /$1 #removes the "/api", rewrites as "/"
spec:
    rules:
        - http:
              paths:
                  - path: /?(.*)
                    backend:
                        serviceName: client-cluster-ip-service
                        servicePort: 3000
                  - path: /api/?(.*)
                    backend:
                        serviceName: server-cluster-ip-service
                        servicePort: 5000
